# FAST-OAD_plugin_template

./: .gitignore  .pre-commit-config.yaml  AUTHORS.rst  README.md  pyproject.toml
.github/workflows/: tests.yml
src/rename_me/configurations/: sample_conf.yaml  sample_conf.yml
src/rename_me/models/: __init__.py  variable_descriptions.txt
src/rename_me/models/sample/: sample_discipline.py
src/rename_me/models/sample/tests/: test_sample_discipline.py
src/rename_me/models/sample/tests/data/: data.xml
src/rename_me/notebooks/: .gitignore  README.md  sample_notebook.ipynb
tests/integration_tests/: test_sample_process.py
tests/integration_tests/data/: conf.yml  data.xml
