# Project metadata (PEP 621) ===============================================
[project]
name = "RENAME_ME"
version = "0.1.0"
description = "This is a plugin for FAST-OAD."
readme = "README.md"
authors = []  # Add authors in format: {name = "Name", email = "email@example.com"}
requires-python = ">=3.10,<3.15"

# User dependencies ------------------------------------------------------------
dependencies = [
    "fast-oad-core>=1.9.0,<2",
    "jupyterlab-widgets<3.0.16",
]

# Entry points -----------------------------------------------------------------
[project.entry-points."fastoad.plugins"]
# Here is registered the FAST-OAD plugin:
# - "plugin_name" can be freely chosen
# - "rename_me" must be the name of an installed package (see "packages" in tool.poetry section)
# For more information, see https://fast-oad.readthedocs.io/en/stable/documentation/custom_modules/add_plugin.html
plugin_name = "rename_me"


# Poetry settings ==============================================================
[tool.poetry]
requires-poetry = ">=2.0"  # You should upgrade poetry to v2 using 'pipx upgrade poetry'
packages = [
    { include = "rename_me", from = "src" },
]
exclude = ["**/tests/**"]

# Development dependencies -----------------------------------------------------
[tool.poetry.group.dev.dependencies]
# Dependencies that may be used during development process (validation,...) but not needed
# by end users.
matplotlib = "^3.9.2"

[tool.poetry.group.test.dependencies]
# Dependencies for test suite
pytest = "^8.0"
pytest-cov = "^5.0"
nbval = ">=0.11,<1.0"

[tool.poetry.group.lint.dependencies]
pre-commit = "^3"
ruff = "^0.15.0"


# Packaging system =============================================================
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


# Pytest settings ==============================================================
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "--verbose"
testpaths = ["src", "tests"]